# eaglescribe

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml  tuning-ci.yml
docs/adr/: 0001-scope-tuning-rules-to-recognition-fingerprints.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
research/: STATUS.md  escape-cancel-spec.md  in-process-llm-stance.md  linux-hotkey-paste-spec.md  mic-device-picker-spec.md  onboarding-permissions-spec.md  packaging-spec.md  requirements-local-app.md  stack-decision.md  tray-polish-spec.md  tuning-acceptance-contract.md  tuning-inference-spec.md  tuning-phrase-corpus.md  vad-silence-trim-spec.md  wispr-flow.md
scripts/: download-whisper-model.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: mic_probe.rs  stt_wav_probe.rs
src-tauri/src/: audio.rs  dictionary.rs  error.rs  history.rs  hotkey.rs  inject.rs  lib.rs  llm.rs  main.rs  permissions_help.rs  polish.rs  recognition.rs  settings.rs  snippets.rs  state.rs  stt.rs  tuning.rs  tuning_ci.rs  tuning_diagnostics.rs  tuning_session.rs
src-tauri/testdata/: cmudict-tuning-74790861.dict
